使用 Colaboratory 建立

--- a/tung.ipynb
+++ b/tung.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjfbT7xXbuH15AJ+npXuvM",
+      "authorship_tag": "ABX9TyOUT97FHtH0gWFT8gNgYS1q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
       "source": [
         "!pip install -q tensorflow-recommenders\n",
         "!pip install -q --upgrade tensorflow-datasets\n",
-        "!pip install -q scann"
+        "!pip install -q scann\n",
+        "!rm -rf ./logs/"
       ],
       "metadata": {
         "colab": {
@@ -52,6 +53,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%load_ext tensorboard"
+      ],
+      "metadata": {
+        "id": "Hb8bBFAyL1wJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -389,7 +401,9 @@
       "cell_type": "code",
       "source": [
         "model = MovielensModel(user_model, movie_model)\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adagrad(learning_rate=0.1))"
+        "model.compile(optimizer=tf.keras.optimizers.Adagrad(learning_rate=0.1))\n",
+        "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+        "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)"
       ],
       "metadata": {
         "id": "PaooFA4ut6xd"
@@ -412,7 +426,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(cached_train, epochs=3)"
+        "model.fit(cached_train, epochs=3, callbacks=[tensorboard_callback])"
       ],
       "metadata": {
         "colab": {
