--- a/Sequantial model final version.ipynb
+++ b/Sequantial model final version.ipynb
@@ -1,6 +1,173 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe6ccd44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q tensorflow-recommenders\n",
+    "!pip install -q --upgrade tensorflow-datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbefb645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pprint\n",
+    "import tempfile\n",
+    "\n",
+    "from typing import Dict, Text\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_datasets as tfds\n",
+    "import tensorflow_recommenders as tfrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c6f4efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_filename = \"/kaggle/input/datasetmovielens/train_movielens_1m.tfrecord\"\n",
+    "train = tf.data.TFRecordDataset(train_filename)\n",
+    "\n",
+    "test_filename = \"/kaggle/input/datasetmovielens/test_movielens_1m.tfrecord\"\n",
+    "test = tf.data.TFRecordDataset(test_filename)\n",
+    "\n",
+    "feature_description = {\n",
+    "    'context_movie_id': tf.io.FixedLenFeature([10], tf.int64, default_value=np.repeat(0, 10)),\n",
+    "    'context_movie_rating': tf.io.FixedLenFeature([10], tf.float32, default_value=np.repeat(0, 10)),\n",
+    "    'context_movie_year': tf.io.FixedLenFeature([10], tf.int64, default_value=np.repeat(1980, 10)),\n",
+    "    'context_movie_genre': tf.io.FixedLenFeature([10], tf.string, default_value=np.repeat(\"Drama\", 10)),\n",
+    "    'label_movie_id': tf.io.FixedLenFeature([1], tf.int64, default_value=0),\n",
+    "}\n",
+    "\n",
+    "def _parse_function(example_proto):\n",
+    "    return tf.io.parse_single_example(example_proto, feature_description)\n",
+    "\n",
+    "train_ds = train.map(_parse_function).map(lambda x: {\n",
+    "    \"context_movie_id\": tf.strings.as_string(x[\"context_movie_id\"]),\n",
+    "    \"label_movie_id\": tf.strings.as_string(x[\"label_movie_id\"])\n",
+    "})\n",
+    "\n",
+    "test_ds = test.map(_parse_function).map(lambda x: {\n",
+    "    \"context_movie_id\": tf.strings.as_string(x[\"context_movie_id\"]),\n",
+    "    \"label_movie_id\": tf.strings.as_string(x[\"label_movie_id\"])\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1182cfaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = tfds.load(\"movielens/100k-movies\", split='train')\n",
+    "movies = movies.map(lambda x: x[\"movie_id\"])\n",
+    "movie_ids = movies.batch(1_000)\n",
+    "unique_movie_ids = np.unique(np.concatenate(list(movie_ids)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e9a47e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dimension = 32\n",
+    "\n",
+    "query_model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.StringLookup(vocabulary=unique_movie_ids, mask_token=None),\n",
+    "    tf.keras.layers.Embedding(len(unique_movie_ids) + 1, embedding_dimension), \n",
+    "    tf.keras.layers.GRU(embedding_dimension),\n",
+    "])\n",
+    "\n",
+    "candidate_model = tf.keras.Sequential([\n",
+    "  tf.keras.layers.StringLookup(vocabulary=unique_movie_ids, mask_token=None),\n",
+    "  tf.keras.layers.Embedding(len(unique_movie_ids) + 1, embedding_dimension)\n",
+    "])\n",
+    "\n",
+    "metrics = tfrs.metrics.FactorizedTopK(candidates=movies.batch(128).map(candidate_model))\n",
+    "\n",
+    "task = tfrs.tasks.Retrieval(metrics=metrics)\n",
+    "\n",
+    "\n",
+    "class Model(tfrs.Model):\n",
+    "\n",
+    "    def __init__(self, query_model, candidate_model):\n",
+    "        super().__init__()\n",
+    "        self._query_model = query_model\n",
+    "        self._candidate_model = candidate_model\n",
+    "        self._task = task\n",
+    "\n",
+    "    def compute_loss(self, features, training=False):\n",
+    "        watch_history = features[\"context_movie_id\"]\n",
+    "        watch_next_label = features[\"label_movie_id\"]\n",
+    "\n",
+    "        query_embedding = self._query_model(watch_history)       \n",
+    "        candidate_embedding = self._candidate_model(watch_next_label)\n",
+    "\n",
+    "        return self._task(query_embedding, candidate_embedding, compute_metrics=not training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eac02e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "es = EarlyStopping(monitor='val_factorized_top_k/top_100_categorical_accuracy', mode='max', verbose=1, patience=10)\n",
+    "\n",
+    "model = Model(query_model, candidate_model)\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adagrad(learning_rate=0.1))\n",
+    "\n",
+    "cached_train = train_ds.shuffle(10_000).batch(12800).cache()\n",
+    "cached_test = test_ds.batch(2560).cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b53ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(cached_test, return_dict=True)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
